# mykeepon-storyteller

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  package.xml  package.xml~
audio_files/: sourgrapes.sable  sourgrapes.sable~  sourgrapes_labels.txt  sourgrapes_labels.txt~  sourgrapes_noprosody.sable  sourgrapes_noprosody.sable~  the_dog_and_his_reflection.sable~  thedogandhisreflection.sable  thedogandhisreflection.sable~  thedogandhisreflection_labels.txt  thedogandhisreflection_noprosody.sable  thedogandhisreflection_noprosody.sable~  themiserandhisgold.sable  themiserandhisgold.sable~  themiserandhisgold_labels.txt  themiserandhisgold_noprosody.sable  themiserandhisgold_noprosody.sable~  twotravelersandabear.sable  twotravelersandabear.sable~  twotravelersandabear_labels.txt  twotravelersandabear_noprosody.sable  twotravelersandabear_noprosody.sable~
msg/: AudioMsg.msg  AudioMsg.msg~  ControllerMsg.msg~
src/: analyze_wav.py  arduino_message_generator.py  arduino_message_receiver.py  arduino_remote_controller.py  arduino_remote_controller.py~  audio_capture_test.py  audio_capture_test.py~  audio_to_ino_controller.py  audio_to_ino_controller.py~  audiocap.py  convert_labels.py  convert_labels.py~  parabolic.py  parabolic.py~  readchunks.py  realtime_audio_capture.py  realtime_audio_capture.py~  realtime_audio_controller.py  realtime_audio_controller.py~  realtime_audio_recorder.py  realtime_audio_recorder.py~  recorder.py  recorder.py~  states_actions.py~  states_and_actions.py  states_and_actions.py~
src/FullServoKeepon/: FullServoKeepon_emo.ino  (+3 more)
(+5 files in other folders)
