<?xml version="1.0"?>
<package>
	<name>mykeepon_storyteller</name>
	<version>0.0.0</version>
	<description>MyKeepon Robot Storyteller Project</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag --> 
	<maintainer email="bradsheneman@gmail.com">Brad Sheneman</maintainer>
	<maintainer email="jbelknap01@gmail.com">Jordan Belknap</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<license>BSD</license>


	<!-- The *_depend tags are used to specify dependencies -->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rospy</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>rospy</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>


	<!-- The export tag contains other, unspecified, tags -->
	<export>
	<!-- You can specify that this package is a metapackage here: -->
	<!-- <metapackage/> -->

	<!-- Other tools can request additional information be placed here -->

	</export>
</package>
